Closed Bug 407352 Opened 18 years ago Closed 18 years ago

MakeSpaceTextRun should short-circuit zero-sized fonts [ASSERTION: throwing away our good metrics]

Categories

(Core :: Graphics, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla1.9beta3

People

(Reporter: MatsPalmgren_bugz, Assigned: MatsPalmgren_bugz)

References

()

Details

Attachments

(2 files, 1 obsolete file)

MakeSpaceTextRun should short-circuit zero-sized fonts. Follow-up from bug 404112 comment 29 / bug 406635 comment 8 Also occurs on http://tinderbox.mozilla.org/showbuilds.cgi?tree=Firefox
Attached file stack
Attached patch Like so? (obsolete) — Splinter Review
+ NS_ASSERTION(mSpaceGlyph != 0, "GetSpaceGlyph() called with zero-sized font?"); Interesting: the only fonts I can find (on Mac, Vista, XP, Linux) without a space glyph are Vista: "Bookshelf Symbol 7" BSSYM7.TTF XP: "Marlett" marlett.ttf Linux: "Sinaloa" freefonts/capri.pfb, "Sharktooth" sharefonts/sharktoo.pfb These fonts would fire the assert but I doubt they are used much on the web.
Blocks: 407415
Attached patch Patch rev. 2Splinter Review
Yeah, I think we should test the font size instead, that maps more directly to what we want to detect. (only change is the assertion)
Assignee: nobody → mats.palmgren
Attachment #292084 - Attachment is obsolete: true
Status: NEW → ASSIGNED
Attachment #292232 - Flags: superreview?(roc)
Attachment #292232 - Flags: review?(roc)
Attachment #292232 - Flags: superreview?(roc)
Attachment #292232 - Flags: superreview+
Attachment #292232 - Flags: review?(roc)
Attachment #292232 - Flags: review+
Attachment #292232 - Flags: approval1.9?
Attachment #292232 - Flags: approval1.9? → approval1.9+
mozilla/gfx/thebes/public/gfxPangoFonts.h 1.58 mozilla/gfx/thebes/src/gfxFont.cpp 1.80 -> FIXED
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9 M11
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: