MakeSpaceTextRun() should short-circuit zero-sized fonts. b=407352 r+sr=roc a=dsicore